[gd_scene load_steps=5 format=3 uid="uid://dlyyviojwkopk"]

[ext_resource type="Script" path="res://Houses/BarbHouse.gd" id="1_bxlo1"]
[ext_resource type="Texture2D" uid="uid://b87jyy7lt6s2e" path="res://images/MiniWorldSprites/Buildings/Wood/Barracks.png" id="1_wmedk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urmfe"]
size = Vector2(16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5toi4"]
bg_color = Color(0, 0.709804, 0.47451, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0980392, 0.898039, 0.996078, 0.470588)
border_blend = true

[node name="BarbHouse" type="StaticBody2D"]
scale = Vector2(2, 2)
input_pickable = true
script = ExtResource("1_bxlo1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_urmfe")

[node name="Barracks" type="Sprite2D" parent="."]
texture = ExtResource("1_wmedk")
hframes = 4
vframes = 5

[node name="Selected" type="Panel" parent="."]
offset_left = -9.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = 9.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_5toi4")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
